feat(astro): integrate tailwindcss | sas

--- a/astro/src/components/Welcome.astro
+++ b/astro/src/components/Welcome.astro
@@ -4,7 +4,7 @@ import background from '../assets/background.svg';
 ---
 
 <p-wordmark></p-wordmark>
-<div id="container">
+<div id="container" class="hidden">
 	<img id="background" src={background.src} alt="" fetchpriority="high" />
 	<main>
 		<section id="hero">
