--- a/astro/src/components/Header.astro
+++ b/astro/src/components/Header.astro
@@ -3,33 +3,41 @@
     <div class="flex flex-wrap gap-static-md items-center justify-start">
       <nav aria-label="Main">
         <p-button-pure
-          id="nav-button"
           class="p-static-xs -m-static-xs"
           type="button"
           icon="menu-lines"
           hide-label="{base: true, s: false}"
           aria="{'aria-haspopup': 'dialog'}"
+          onclick="this.nextElementSibling.open = true;"
         >
           Menu
         </p-button-pure>
-        <p-drilldown id="nav-drilldown">
-          <p-drilldown-item identifier="id-1" label="Some Label (1)">
-            <p-drilldown-item identifier="id-1-1" label="Some Label (1-1)">
-              <p-drilldown-link href="#">Some anchor (1-1)</p-drilldown-link>
-              <p-drilldown-link href="#">Some anchor (1-1)</p-drilldown-link>
-            </p-drilldown-item>
-            <p-drilldown-link href="#">Some anchor (1)</p-drilldown-link>
-            <p-drilldown-link href="#">Some anchor (1)</p-drilldown-link>
-            <p-drilldown-link href="#">Some anchor (1)</p-drilldown-link>
+        <p-drilldown>
+          <p-drilldown-item identifier="id-1" label="Models">
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
           </p-drilldown-item>
-          <p-drilldown-item identifier="id-2" label="Some Label (2)">
-            <p-drilldown-link href="#">Some anchor (2)</p-drilldown-link>
-            <p-drilldown-link href="#">Some anchor (2)</p-drilldown-link>
-            <p-drilldown-link href="#">Some anchor (2)</p-drilldown-link>
+          <p-drilldown-item identifier="id-2" label="Shopping Tools">
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
           </p-drilldown-item>
-          <p-drilldown-item identifier="id-3" label="Some Label (3)">
-            <p-drilldown-link href="#">Some anchor (3)</p-drilldown-link>
-            <p-drilldown-link href="#">Some anchor (3)</p-drilldown-link>
+          <p-drilldown-link href="#">Shopping Tools</p-drilldown-link>
+          <p-drilldown-item identifier="id-3" label="Services">
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+          </p-drilldown-item>
+          <p-drilldown-item identifier="id-4" label="Experience">
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+          </p-drilldown-item>
+          <p-drilldown-item identifier="id-5" label="Find your Porsche Center">
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
+            <p-drilldown-link href="#">Some anchor</p-drilldown-link>
           </p-drilldown-item>
         </p-drilldown>
       </nav>
