--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -33,5 +33,22 @@ import {
 	<body class="grid-template gap-y-fluid-lg bg-surface font-porsche-next font-normal text-sm text-primary">
 		<slot />
 		<Fragment set:html={getLoaderScript()} />
+    <script>
+      for (const accordion of document.querySelectorAll('p-accordion')) {
+        accordion.addEventListener('update', (e) => {
+          e.target.open = e.detail.open;
+        });
+      }
+
+      for (const drilldown of document.querySelectorAll('p-drilldown')) {
+        drilldown?.addEventListener('dismiss', (e) => {
+          e.target.open = false;
+        });
+
+        drilldown?.addEventListener('update', (e) => {
+          e.target.activeIdentifier = e.detail.activeIdentifier;
+        });
+      }
+    </script>
 	</body>
 </html>
