--- a/astro/src/styles/global.css
+++ b/astro/src/styles/global.css
@@ -1,2 +1,6 @@
 @import "tailwindcss";
 @import "@porsche-design-system/components-js/tailwindcss";
+
+@theme {
+  --paint: 180deg, rgba(255, 255, 255, 0.36), rgba(255, 255, 255, 0.13) 50%, rgba(0, 0, 0, 0.12) 52%, rgba(0, 0, 0, 0);
+}
